--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,7 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server",
-    "client": "npm start --prefix ../PageResponsive/demo",
+    "client": "npm start --prefix ../Frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
